<resources>
    <string name="app_name">BTC envios</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="balance">Balance</string>
    <string name="envios">Envios</string>
    <string name="historial">Historial</string>
    <string name="env_o_de_bitcoins">Envío de Bitcoins</string>
    <string name="direccion_destino">Direccion destino</string>
    <string name="monto_a_enviar">Monto a enviar (btc)</string>
    <string name="comision">Comision</string>
    <string name="enviar">Enviar</string>
    <string name="total">Total (btc)</string>
    <string name="rate">Rate</string>
    <string name="waiting_state">WAITING</string>
    <string name="completed_status">COMPLETED</string>
    <string name="no_balance">NO_BALANCE</string>
</resources>
