<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".btcenvios.view.SendFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="287dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="15dp"
        android:textSize="24sp"
        android:text="@string/env_o_de_bitcoins"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editDest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/direccion_destino"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/monto_a_enviar"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDest" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="15dp"
        android:text="@string/comision"
        app:layout_constraintBottom_toTopOf="@+id/editFee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAmount" />

    <EditText
        android:id="@+id/editFee"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="15dp"
        android:text="@string/rate"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@id/textView4" />

    <EditText
        android:id="@+id/editRate"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="10dp"
        android:text="@string/total"
        app:layout_constraintBottom_toTopOf="@+id/editTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFee" />

    <EditText
        android:id="@+id/editTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="15dp"
        android:clickable="false"
        android:ems="10"
        android:inputType="none"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="125dp"
        android:text="@string/enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTotal" />

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="352dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="27dp"
        android:text="status"
        android:visibility="gone"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTotal" />
</androidx.constraintlayout.widget.ConstraintLayout>